src/test/ui/wf/wf-inherent-impl-where-clause.stderr
error[E0277]: the trait bound `U: std::marker::Copy` is not satisfied
  --> $DIR/wf-inherent-impl-where-clause.rs:11:29
   |
LL | trait ExtraCopy<T:Copy> { }
   | ----------------------- required by `ExtraCopy`
...
LL | impl<T,U> Foo<T,U> where T: ExtraCopy<U>
   |                             ^^^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `U`
   |
help: consider further restricting type parameter `U`
   |
LL | impl<T,U> Foo<T,U> where T: ExtraCopy<U>, U: std::marker::Copy
   |                                         ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
